:recycle: 스트림 리스트 반환메서드 변경